# pasta-la-pepito

./: pyproject.toml  schema.yml
accounts/: admin.py  managers.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_email.py
config/: settings.py  urls.py
order/: admin.py  models.py  serializers.py  views.py
order/migrations/: 0001_initial.py  0002_alter_orderproduct_order_id.py  0002_remove_order_cart_order_cart.py  0003_alter_orderproduct_order_id.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py
